# upbit-pipeline

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
clickhouse/: init-simple.sql  init.sql
clickhouse/config/: clickhouse-1-config.xml  clickhouse-2-config.xml  keeper-config.xml  users.xml
docs/: 00-접속정보.md  01-프로젝트-개요.md  02-kafka-클러스터-구축.md  03-flink-클러스터-구축.md  04-minio-paimon-스토리지.md  05-cursor-mcp-설정.md  06-upbit-pipeline-구현.md  07-파이프라인-구축-실습.md  08-clickhouse-grafana-가이드.md  09-기술-선택-의사결정.md  10-에러-노트.md  11-성능-최적화-분석.md  12-기술-면접-가이드.md
flink/: Dockerfile  flink-conf.yaml
flink-sql/: 00-setup-jars.sql  01-create-catalogs.sql  02-create-kafka-sources.sql  03-create-paimon-tables.sql  04-streaming-jobs.sql  05-queries.sql  sql-client-init.sql
grafana/dashboards/: upbit-realtime-v2.json  upbit-realtime.json  upbit-simple.json
grafana/provisioning/alerting/: alerts.yml
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
kubernetes/: kafka-ui.yaml  kafka.yaml  namespace.yaml
minio/: nginx.conf
scripts/: run-pipeline.sh  setup-clickhouse-grafana.sh  setup-minio-buckets.sh  start-docker.sh  start-flink-jobs.sh  start-k8s.sh  stop-docker.sh  stop-k8s.sh  test-clickhouse.sh  test-kafka.sh
src/: __init__.py  exceptions.py  main.py
src/config/: __init__.py  settings.py
src/consumers/: __init__.py  upbit_websocket.py
src/models/: __init__.py  base.py  enums.py  orderbook.py  ticker.py  trade.py
src/pipeline/: __init__.py  kafka_handler.py
src/producers/: __init__.py  kafka_producer.py
src/utils/: __init__.py  logging.py  serialization.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_kafka_producer.py  test_models.py  test_serialization.py  test_websocket_client.py
